--- a/VisibleConfusion/MainWindow.xaml
+++ b/VisibleConfusion/MainWindow.xaml
@@ -9,8 +9,20 @@
         Height="500"
         MinWidth="500"
         MinHeight="100"
-        Width="800">
+        Width="800"
+        WindowStyle="None"
+        >
+    <WindowChrome.WindowChrome>
+        <WindowChrome CaptionHeight="32"
+                      ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}" />
+    </WindowChrome.WindowChrome>
     <Grid Background="#111">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <local:TitleBar /> 
+        <Grid Grid.Row="1">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="1.5*" />
@@ -21,5 +33,6 @@
         <local:PictureView Grid.Column="1" />
         <local:ThingsBetwixt Grid.Column="2" />
         <local:PictureView Grid.Column="3" />
+    </Grid>
     </Grid>
 </Window>
