--- a/VisibleConfusion/MainWindow.xaml
+++ b/VisibleConfusion/MainWindow.xaml
@@ -10,29 +10,24 @@
         MinWidth="500"
         MinHeight="100"
         Width="800"
-        WindowStyle="None"
-        >
+        WindowStyle="None">
     <WindowChrome.WindowChrome>
         <WindowChrome CaptionHeight="32"
                       ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}" />
     </WindowChrome.WindowChrome>
     <Grid Background="#111">
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <local:TitleBar /> 
+        <local:TitleBar />
         <Grid Grid.Row="1">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="1.5*" />
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="1.5*" />
-        </Grid.ColumnDefinitions>
-        <local:SideBar />
-        <local:PictureView Grid.Column="1" />
-        <local:ThingsBetwixt Grid.Column="2" />
-        <local:PictureView Grid.Column="3" />
-    </Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="1.5*" />
+            </Grid.ColumnDefinitions>
+            <local:SideBar />
+            <local:Task1 Grid.Column="1" />
+        </Grid>
     </Grid>
 </Window>
