--- a/VisibleConfusion/MVVM/View/TitleBar.xaml
+++ b/VisibleConfusion/MVVM/View/TitleBar.xaml
@@ -53,7 +53,7 @@
                                 Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="{TemplateBinding BorderThickness}"
-                                CornerRadius="2"
+                                CornerRadius="4"
                                 SnapsToDevicePixels="true">
                             <ContentPresenter x:Name="contentPresenter"
                                               Focusable="False"
@@ -153,7 +153,8 @@
             <Button  Style="{DynamicResource TitleBarButtons}"
                      Grid.Column="3"
                      Click="OnCloseButtonClick"
-                     WindowChrome.IsHitTestVisibleInChrome="True">
+                     WindowChrome.IsHitTestVisibleInChrome="True"
+                     Margin="0,0,4,0">
                 <Control Style="{StaticResource CloseIcon}"
                          RenderTransformOrigin="1,1"
                          Height="12"
