--- a/VisibleConfusion/MainWindow.xaml
+++ b/VisibleConfusion/MainWindow.xaml
@@ -10,12 +10,15 @@
         MinWidth="500"
         MinHeight="100"
         Width="800"
-        WindowStyle="None">
+        WindowStyle="None"
+        Background="#111">
     <WindowChrome.WindowChrome>
         <WindowChrome CaptionHeight="32"
-                      ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}" />
+                      ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}" 
+                      />
     </WindowChrome.WindowChrome>
-    <Grid Background="#111">
+    <Grid 
+         Margin="{x:Static SystemParameters.WindowResizeBorderThickness}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition />
