--- a/VisibleConfusion/MVVM/View/Task1.xaml
+++ b/VisibleConfusion/MVVM/View/Task1.xaml
@@ -1,75 +1,199 @@
-﻿<UserControl
-	x:Class="VisibleConfusion.MVVM.View.Task1"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:VisibleConfusion.MVVM.View"
-	xmlns:viewModel="clr-namespace:VisibleConfusion.MVVM.ViewModel">
-	<Grid>
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition
-				Width="1.5*" />
-			<ColumnDefinition
-				Width="Auto" />
-			<ColumnDefinition
-				Width="1.5*" />
-		</Grid.ColumnDefinitions>
-		<local:PictureView
-			Grid.Column="0" />
-		<DockPanel
-			Grid.Column="1">
-			<WrapPanel
-				DockPanel.Dock="Top"
-				Margin="1"
-				VerticalAlignment="Center"
-				HorizontalAlignment="Center">
-				<Button>Prosty film</Button>
-			</WrapPanel>
-			<Grid
-				DockPanel.Dock="Bottom"
-				HorizontalAlignment="Center"
-				VerticalAlignment="Center">
-				<Grid.RowDefinitions>
-					<RowDefinition />
-					<RowDefinition />
-					<RowDefinition />
-					<RowDefinition />
-					<RowDefinition />
-					<RowDefinition />
-				</Grid.RowDefinitions>
-				<Button>
-					<Control
-						Style="{StaticResource RightArrow}"
-						RenderTransformOrigin="1,1"
-						Height="20"
-						Width="20">
-					</Control>
-				</Button>
-				<CheckBox
-					Grid.Row="1"
-					HorizontalAlignment="Center">R</CheckBox>
-				<CheckBox
-					Grid.Row="2"
-					HorizontalAlignment="Center">G</CheckBox>
-				<CheckBox
-					Grid.Row="3"
-					HorizontalAlignment="Center">B</CheckBox>
-				<Button
-					Grid.Row="4">
-					<Control
-						Style="{StaticResource LeftArrow}"
-						RenderTransformOrigin="1,1"
-						Height="20"
-						Width="20">
-					</Control>
-				</Button>
-				<Button
-					Grid.Row="5">Mono</Button>
-			</Grid>
+﻿<UserControl x:Class="VisibleConfusion.MVVM.View.Task1"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:VisibleConfusion.MVVM.View"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+             xmlns:viewModel="clr-namespace:VisibleConfusion.MVVM.ViewModel"
+             xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1.5*" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="1.5*" />
+            <ColumnDefinition Width="1.5*" />
+        </Grid.ColumnDefinitions>
+        <local:PictureView Grid.Column="0" />
+        <DockPanel Grid.Column="1">
+            <WrapPanel DockPanel.Dock="Top"
+                       Margin="1"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Center">
+                <Button>Prosty film</Button>
+            </WrapPanel>
+            <Grid DockPanel.Dock="Bottom"
+                  HorizontalAlignment="Center"
+                  VerticalAlignment="Center">
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <Button>
+                    <Control Style="{StaticResource RightArrow}"
+                             RenderTransformOrigin="1,1"
+                             Height="20"
+                             Width="20">
+                    </Control>
+                </Button>
+                <CheckBox Grid.Row="1"
+                          HorizontalAlignment="Center">R</CheckBox>
+                <CheckBox Grid.Row="2"
+                          HorizontalAlignment="Center">G</CheckBox>
+                <CheckBox Grid.Row="3"
+                          HorizontalAlignment="Center">B</CheckBox>
+                <Button Grid.Row="4">
+                    <Control Style="{StaticResource LeftArrow}"
+                             RenderTransformOrigin="1,1"
+                             Height="20"
+                             Width="20">
+                    </Control>
+                </Button>
+                <Button Grid.Row="5">Mono</Button>
+            </Grid>
 
-		</DockPanel>
-		<local:PictureView
-			Grid.Column="2" />
-	</Grid>
+        </DockPanel>
+        <local:PictureView Grid.Column="2" />
+        <Grid Grid.Column="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+            <Grid
+                  Margin="8">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0"
+                           Margin="5"
+                           Foreground="{StaticResource TextColor_1}">Transformacje:</TextBlock>
+                <Grid  Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <Button Grid.Column="0"
+                            VerticalAlignment="Top">LUT</Button>
+                    <Image Width="128"
+                           Height="128"
+                           Grid.Column="1"></Image>
+                    <Button Grid.Column="2"
+                            VerticalAlignment="Top">P2=T(P1)</Button>
+                </Grid>
+                <RadioButton Grid.Row="2"
+                             Margin="5"
+                             HorizontalAlignment="Center">Operacja tożsamościowa</RadioButton>
+                <RadioButton Grid.Row="3"
+                             Margin="5"
+                             HorizontalAlignment="Center">Negatyw</RadioButton>
+                <RadioButton Grid.Row="4"
+                             Margin="5"
+                             HorizontalAlignment="Center">Jasność +/-: P1</RadioButton>
+                <RadioButton Grid.Row="5"
+                             Margin="5"
+                             HorizontalAlignment="Center">Progowanie: P1</RadioButton>
+                <RadioButton Grid.Row="6"
+                             Margin="5"
+                             HorizontalAlignment="Center">Progowanie: P1, P2</RadioButton>
+                <RadioButton Grid.Row="7"
+                             Margin="5"
+                             HorizontalAlignment="Center">Kontrast: P1</RadioButton>
+                <Grid Grid.Row="8">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <CheckBox HorizontalAlignment="Center">R</CheckBox>
+                        <CheckBox HorizontalAlignment="Center"
+                                  Grid.Row="1">G</CheckBox>
+                        <CheckBox HorizontalAlignment="Center"
+                                  Grid.Row="2">B</CheckBox>
+                    </Grid>
+                    <Grid Grid.Column="1">
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <TextBlock Foreground="{StaticResource TextColor_1}">P1:</TextBlock>
+                        <xctk:IntegerUpDown Value="{Binding SelectedPixelPos.X, Mode=TwoWay}"
+                                            VerticalAlignment="Center"
+                                            HorizontalAlignment="Center"
+                                            Minimum="0"
+                                            DefaultValue="0"
+                                            Maximum="{Binding MaxPixelPos.X}"
+                                            ClipValueToMinMax="True"
+                                            AllowSpin="True"
+                                            Grid.Row="1">
+                            <behaviors:Interaction.Triggers>
+                                <behaviors:EventTrigger EventName="ValueChanged">
+                                    <behaviors:InvokeCommandAction Command="{Binding OnNumericUpDownPixelPosChangedCommand}"
+                                                                   PassEventArgsToCommand="True" />
+                                </behaviors:EventTrigger>
+                            </behaviors:Interaction.Triggers>
+                        </xctk:IntegerUpDown>
+                    </Grid>
+                    <Grid Grid.Column="2">
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <TextBlock Foreground="{StaticResource TextColor_1}">P2:</TextBlock>
+                        <xctk:IntegerUpDown Value="{Binding SelectedPixelPos.X, Mode=TwoWay}"
+                                            VerticalAlignment="Center"
+                                            HorizontalAlignment="Center"
+                                            Minimum="0"
+                                            DefaultValue="0"
+                                            Maximum="{Binding MaxPixelPos.X}"
+                                            ClipValueToMinMax="True"
+                                            AllowSpin="True"
+                                            Grid.Row="1">
+                            <behaviors:Interaction.Triggers>
+                                <behaviors:EventTrigger EventName="ValueChanged">
+                                    <behaviors:InvokeCommandAction Command="{Binding OnNumericUpDownPixelPosChangedCommand}"
+                                                                   PassEventArgsToCommand="True" />
+                                </behaviors:EventTrigger>
+                            </behaviors:Interaction.Triggers>
+                        </xctk:IntegerUpDown>
+                    </Grid>
+                </Grid>
+            </Grid>
+            <Grid Grid.Row="1" Margin="8">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0"
+                           Margin="5"
+                           Foreground="{StaticResource TextColor_1}">Zoom:</TextBlock>
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <Button>Zoom In</Button>
+                    <Button Grid.Column="1">Zoom Out</Button>
+                </Grid>
+            </Grid>
+        </Grid>
+    </Grid>
 </UserControl>
