--- a/VisibleConfusion/MVVM/View/Task1.xaml
+++ b/VisibleConfusion/MVVM/View/Task1.xaml
@@ -60,11 +60,10 @@
         <local:PictureView Grid.Column="2" />
         <Grid Grid.Column="3">
             <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
-            <Grid
-                  Margin="8">
+            <Grid Margin="8">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
@@ -177,10 +176,11 @@
                     </Grid>
                 </Grid>
             </Grid>
-            <Grid Grid.Row="1" Margin="8">
+            <Grid Grid.Row="1"
+                  Margin="8">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Row="0"
                            Margin="5"
