Revert "Revert "Image LeftToRight and vice-versa transfer with filter ;)""
This reverts commit 30e808645e2c3f823e764a0ca97f68160fbf94ae.

--- a/VisibleConfusion/MVVM/View/Task1.xaml
+++ b/VisibleConfusion/MVVM/View/Task1.xaml
@@ -70,6 +70,7 @@
 
 		</DockPanel>
 		<local:PictureView
+			DataContext="{Binding RightPictureViewModel}"
 			Grid.Column="2" />
 	</Grid>
 </UserControl>
