--- a/VisibleConfusion/MVVM/View/Task1.xaml
+++ b/VisibleConfusion/MVVM/View/Task1.xaml
@@ -104,7 +104,8 @@
                 </Grid>
                 <RadioButton Grid.Row="2"
                              Margin="5"
-                             HorizontalAlignment="Center">Operacja tożsamościowa</RadioButton>
+                             HorizontalAlignment="Center"
+                             IsChecked="True">Operacja tożsamościowa</RadioButton>
                 <RadioButton Grid.Row="3"
                              Margin="5"
                              HorizontalAlignment="Center">Negatyw</RadioButton>
