--- a/VisibleConfusion/theme/RadioButton.xaml
+++ b/VisibleConfusion/theme/RadioButton.xaml
@@ -39,8 +39,6 @@
                      Color="#FF5593FF" />
     <SolidColorBrush x:Key="RadioButton.MouseOver.Glyph"
                      Color="#FF212121" />
-    <SolidColorBrush x:Key="RadioButton.Pressed.Background"
-                     Color="#FFD9ECFF" />
     <SolidColorBrush x:Key="RadioButton.Pressed.Border"
                      Color="#FF3C77DD" />
     <SolidColorBrush x:Key="RadioButton.Pressed.Glyph"
@@ -55,13 +53,15 @@
         <Setter Property="FocusVisualStyle"
                 Value="{StaticResource FocusVisual}" />
         <Setter Property="Background"
-                Value="{StaticResource RadioButton.Static.Background}" />
+                Value="{StaticResource ForegroundColor}" />
         <Setter Property="BorderBrush"
-                Value="{StaticResource RadioButton.Static.Border}" />
+                Value="{StaticResource TextColor_1}" />
         <Setter Property="Foreground"
                 Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
         <Setter Property="BorderThickness"
-                Value="1" />
+                Value="1.25" />
+        <Setter Property="Effect"
+                Value="{StaticResource dropShadow}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type RadioButton}">
@@ -78,14 +78,16 @@
                                 BorderThickness="{TemplateBinding BorderThickness}"
                                 CornerRadius="100"
                                 HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                Margin="1,1,2,1"
+                                Margin="1,1,1,1"
                                 VerticalAlignment="{TemplateBinding VerticalContentAlignment}">
                             <Grid x:Name="markGrid"
                                   Margin="2">
                                 <Ellipse x:Name="optionMark"
-                                         Fill="{StaticResource RadioButton.Static.Glyph}"
-                                         MinWidth="6"
-                                         MinHeight="6"
+                                         Fill="{StaticResource ElementColor}"
+                                         MinWidth="8"
+                                         MinHeight="8"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Center"
                                          Opacity="0" />
                             </Grid>
                         </Border>
@@ -115,7 +117,7 @@
                                     Value="{StaticResource RadioButton.MouseOver.Background}" />
                             <Setter Property="BorderBrush"
                                     TargetName="radioButtonBorder"
-                                    Value="{StaticResource RadioButton.MouseOver.Border}" />
+                                    Value="{StaticResource AccentColor}"/>
                             <Setter Property="Fill"
                                     TargetName="optionMark"
                                     Value="{StaticResource RadioButton.MouseOver.Glyph}" />
@@ -136,7 +138,7 @@
                                  Value="true">
                             <Setter Property="Background"
                                     TargetName="radioButtonBorder"
-                                    Value="{StaticResource RadioButton.Pressed.Background}" />
+                                    Value="{StaticResource AccentColor}" />
                             <Setter Property="BorderBrush"
                                     TargetName="radioButtonBorder"
                                     Value="{StaticResource RadioButton.Pressed.Border}" />
@@ -149,6 +151,9 @@
                             <Setter Property="Opacity"
                                     TargetName="optionMark"
                                     Value="1" />
+                            <Setter Property="Background"
+                                    TargetName="radioButtonBorder"
+                                    Value="{StaticResource AccentColor}" />
                         </Trigger>
                         <Trigger Property="IsChecked"
                                  Value="{x:Null}">
