--- a/VisibleConfusion/MVVM/View/Task2.xaml
+++ b/VisibleConfusion/MVVM/View/Task2.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="VisibleConfusion.MVVM.View.Task1"
+﻿<UserControl x:Class="VisibleConfusion.MVVM.View.Task2"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -15,7 +15,7 @@
             <ColumnDefinition Width="1.5*" />
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="1.5*" />
-            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="1.5*" />
         </Grid.ColumnDefinitions>
         <local:PictureView Grid.Column="0" 
 						   DataContext="{Binding LeftPictureViewModel}"/>
