--- a/VisibleConfusion/MainWindow.xaml
+++ b/VisibleConfusion/MainWindow.xaml
@@ -1,36 +1,76 @@
-﻿<Window x:Class="VisibleConfusion.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:VisibleConfusion.MVVM.View"
-        mc:Ignorable="d"
-        Title="MainWindow"
-        Height="550"
-        MinWidth="900"
-        MinHeight="100"
-        Width="1000"
-        WindowStyle="SingleBorderWindow"
-        Background="#111">
-    <WindowChrome.WindowChrome>
-        <WindowChrome GlassFrameThickness="0"
-                      UseAeroCaptionButtons="False"
-                      ResizeBorderThickness="5" />
-    </WindowChrome.WindowChrome>
-    <Grid 
-         Margin="5">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <local:TitleBar />
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="1.5*" />
-            </Grid.ColumnDefinitions>
-            <local:SideBar />
-            <local:Task1 Grid.Column="1" />
-        </Grid>
-    </Grid>
+﻿<Window
+	x:Class="VisibleConfusion.MainWindow"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:local="clr-namespace:VisibleConfusion.MVVM.View"
+	mc:Ignorable="d"
+	Title="MainWindow"
+	Height="550"
+	MinWidth="900"
+	MinHeight="100"
+	Width="1000"
+	WindowStyle="SingleBorderWindow"
+	Background="#111">
+	<WindowChrome.WindowChrome>
+		<WindowChrome
+			GlassFrameThickness="0"
+			UseAeroCaptionButtons="False"
+			ResizeBorderThickness="5" />
+	</WindowChrome.WindowChrome>
+	<Grid
+		Margin="5">
+		<Grid.RowDefinitions>
+			<RowDefinition
+				Height="auto" />
+			<RowDefinition />
+		</Grid.RowDefinitions>
+		<local:TitleBar />
+		<Grid
+			Grid.Row="1">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition
+					Width="Auto" />
+				<ColumnDefinition
+					Width="1.5*" />
+			</Grid.ColumnDefinitions>
+			<DockPanel
+				VerticalAlignment="Top"
+				HorizontalAlignment="Center"
+				Dock="Top">
+				<RadioButton
+					Style="{DynamicResource SideBarRadioButton}"
+					DockPanel.Dock="Top"
+					Content="0" />
+				<RadioButton
+					Style="{DynamicResource SideBarRadioButton}"
+					DockPanel.Dock="Top"
+					d:IsChecked="True"
+					Content="1" />
+				<RadioButton
+					Style="{DynamicResource SideBarRadioButton}"
+					DockPanel.Dock="Top"
+					Content="2" />
+				<RadioButton
+					Style="{DynamicResource SideBarRadioButton}"
+					DockPanel.Dock="Top"
+					Content="3" />
+				<RadioButton
+					Style="{DynamicResource SideBarRadioButton}"
+					DockPanel.Dock="Top"
+					Content="4" />
+				<RadioButton
+					Style="{DynamicResource SideBarRadioButton}"
+					DockPanel.Dock="Top"
+					Content="5" />
+				<RadioButton
+					Style="{DynamicResource SideBarRadioButton}"
+					DockPanel.Dock="Top"
+					Content="6" />
+			</DockPanel>
+			<local:Task1
+				Grid.Column="1" />
+		</Grid>
+	</Grid>
 </Window>
