Changed View's names to properly match the MVVM pattern Added bindings to MainWindow's radio-buttons together with DataContext

--- a/VisibleConfusion/MVVM/View/Task2View.xaml
+++ b/VisibleConfusion/MVVM/View/Task2View.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="VisibleConfusion.MVVM.View.Task2"
+﻿<UserControl x:Class="VisibleConfusion.MVVM.View.Task2View"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
