--- a/VisibleConfusion/App.xaml
+++ b/VisibleConfusion/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:VisibleConfusion"
              xmlns:view="clr-namespace:VisibleConfusion.MVVM.View"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindowView.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
