--- a/VisibleConfusion/MainWindowView.xaml
+++ b/VisibleConfusion/MainWindowView.xaml
@@ -1,18 +1,22 @@
 ﻿<Window
-	x:Class="VisibleConfusion.MainWindow"
+	x:Class="VisibleConfusion.MainWindowView"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:local="clr-namespace:VisibleConfusion.MVVM.View"
+	xmlns:viewModel="clr-namespace:VisibleConfusion.MVVM.ViewModel"
 	mc:Ignorable="d"
-	Title="MainWindow"
+	Title="MainWindowView"
 	Height="550"
 	MinWidth="900"
 	MinHeight="100"
 	Width="1000"
 	WindowStyle="SingleBorderWindow"
 	Background="#111">
+	<Window.DataContext>
+		<viewModel:MainWindowViewModel />
+	</Window.DataContext>
 	<WindowChrome.WindowChrome>
 		<WindowChrome
 			GlassFrameThickness="0"
@@ -47,14 +51,17 @@
 					Style="{DynamicResource SideBarRadioButton}"
 					DockPanel.Dock="Top"
 					d:IsChecked="True"
+					Command="{Binding OpenTask1Command}"
 					Content="1" />
 				<RadioButton
 					Style="{DynamicResource SideBarRadioButton}"
 					DockPanel.Dock="Top"
+					Command="{Binding OpenTask2Command}"
 					Content="2" />
 				<RadioButton
 					Style="{DynamicResource SideBarRadioButton}"
 					DockPanel.Dock="Top"
+					Command="{Binding OpenTask3Command}"
 					Content="3" />
 				<RadioButton
 					Style="{DynamicResource SideBarRadioButton}"
@@ -69,8 +76,13 @@
 					DockPanel.Dock="Top"
 					Content="6" />
 			</DockPanel>
-			<local:Task1
-				Grid.Column="1" />
+			<!--<local:Task1
+				Grid.Column="1" />-->
+			<ContentControl
+				Grid.Column="1" 
+				Margin="0"
+				BorderThickness="0"
+				Content=""/>
 		</Grid>
 	</Grid>
 </Window>
