--- a/VisibleConfusion/theme/Resources.xaml
+++ b/VisibleConfusion/theme/Resources.xaml
@@ -33,5 +33,5 @@
 		ShadowDepth="5"
 		BlurRadius="4"
 		Opacity="0.25" />
-
+    <FontFamily x:Key="BlackOpsOne">Fonts/#Black Ops One</FontFamily>
 </ResourceDictionary>
